--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1113,6 +1113,7 @@
     <string name="more_info">Hơn Thông Tin</string>
     <string name="e_game">Cờ vua</string>
     <string name="new_games_beta">New Games | Beta</string>
+    <string name="new_game_and_testing">(New Games | Beta)</string>
 
     <string name="work_time_">Giờ làm việc：</string>
     <string name="appointment_">Hẹn thời gian：</string>
