--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1339,7 +1339,7 @@
     <string name="cs_center">CS Center</string>
     <string name="Pinned">Pinned</string>
     <string name="Unpin">Unpin</string>
-    <string name="new_game_and_testing">New Games | Beta</string>
+    <string name="new_game_and_testing">(New Games | Beta)</string>
     <string name="dont_have_slot_game">No games</string>
     <string name="bad_param">参数错误</string>
     <string name="error_verification_code_forget">验证码错误</string>
