--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1326,11 +1326,12 @@
     <string name="new_game_and_testing">(New Games | Beta)</string>
     <string name="dont_have_slot_game">No games</string>
     <string name="deadline">Deadline</string>
+    <string name="error_verification_code_forget">Verify code wrong</string>
     <string name="place_enter_your_account">Please enter user name</string>
     <string name="find_back_password">Recover password</string>
-    <string name="error_phone_num">手机号码错误</string>
-    <string name="tips_login_password_success">登陆密码修改成功，请重新登录。</string>
-    <string name="error_tips_confirm_password">您输入的密码不一致，请重新输入</string>
-    <string name="hide_confirm_password">确认新登录密码</string>
-    <string name="error_new_password">密码为6-20个字符必须含有数字和字母的组合！</string>
+    <string name="error_phone_num">Phone No. wrong</string>
+    <string name="tips_login_password_success">Login password change successful, Please login again.</string>
+    <string name="error_tips_confirm_password">Password you entered does not match, please re-enter</string>
+    <string name="hide_confirm_password">Confirm new login password</string>
+    <string name="error_new_password">Password consist 6-20 characters and must have a combination of numbers and letters.</string>
 </resources>
