--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1256,6 +1256,7 @@
      <string name="has_send_message_to_phone">Mã xác minh đã gửi đến SĐT của bạn: </string>
     <string name="get_phone_code">Nhận</string>
     <string name="reget_phone_code">Nhận lại</string>
+    <string name="reget_phone_code_for">Nhận lại</string>
     <string name="error_wechat">Lỗi định dạng ID WeChat</string>
     <string name="min_bet_format">Tối thiểu: %s</string>
     <string name="error_confirm_password_forget">Xác nhận mật khẩu không khớp</string>
