--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1210,6 +1210,7 @@
     <string name="has_send_message_to_phone">รหัสยืนยันถูกส่งไปยังโทรศัพท์ของคุณแล้ว</string>
     <string name="get_phone_code">รับรหัส</string>
     <string name="reget_phone_code">รับใหม่อีกครั้ง</string>
+    <string name="reget_phone_code_for">รับใหม่อีกครั้ง</string>
     <string name="error_wechat">ข้อผิดพลาดรูปแบบ WeChat ID</string>
     <string name="comingsoon">เร็วๆ นี้</string>
     <string name="forget_password">ลืมรหัสผ่าน</string>
