--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1335,4 +1335,5 @@
     <string name="hide_confirm_password">Confirm new login password</string>
     <string name="error_new_password">Password consist 6-20 characters and must have a combination of numbers and letters.</string>
     <string name="reget_phone_code_for">Reacquire</string>
+    <string name="pay_maya">Paymaya</string>
 </resources>
