--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1353,4 +1353,5 @@
     <string name="deadline">Deadline</string>
     <string name="reget_phone_code_for">Reacquire</string>
     <string name="online_fortune_pay">FortunePay</string>
+    <string name="pay_maya">Paymaya</string>
 </resources>
