--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -584,6 +584,7 @@
     <string name="hint_e_mail">กรุณากรอกอีเมล์ของคุณ</string>
     <string name="error_e_mail">รูปแบบอีเมลผิดพลาด</string>
     <string name="hint_phone_number">กรุณากรอกหมายเลขโทรศัพท์</string>
+    <string name="hint_phone_num">กรุณากรอกหมายเลขโทรศัพท์</string>
     <string name="error_phone_number">รูปแบบหมายเลขโทรศัพท์ไม่ถูกต้อง</string>
     <string name="setting_password">ตั้งรหัสผ่าน</string>
     <string name="login_password">รหัสผ่านในการเข้าสู่ระบบ</string>
