--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -63,6 +63,8 @@
     <string name="hint_withdrawal_pwd">Mật khẩu gồm 4 chữ số</string>
     <string name="phone_number">Số điện thoại</string>
     <string name="hint_phone_number">Vui lòng nhập số điện thoại</string>
+    <string name="hint_phone_num">Vui lòng nhập số điện thoại</string>
+
     <string name="error_phone_number">Định dạng số điện thoại không đúng</string>
     <string name="qq_number">Số tài khoản QQ</string>
     <string name="hint_qq_number">Vui lòng nhập QQTài khoản</string>
