--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -63,6 +63,7 @@
     <string name="hint_withdrawal_pwd">密码为4个数字</string>
     <string name="phone_number">手机号码</string>
     <string name="hint_phone_number">请输入正确的手机号码</string>
+    <string name="hint_phone_num">请输入正确的手机号码</string>
     <string name="error_phone_number">手机号码格式错误</string>
     <string name="qq_number">QQ号码</string>
     <string name="hint_qq_number">请输入QQ账号</string>
