--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -61,7 +61,7 @@
     <string name="error_confirm_password">Mật khẩu nhập 2 lần không trùng khớp</string>
     <string name="withdrawal_pwd">Mật khẩu rút tiền</string>
     <string name="hint_withdrawal_pwd">Mật khẩu gồm 4 chữ số</string>
-    <string name="phone_number">Số điện thoại</string>
+    <string name="phone_number">số điện thoại</string>
     <string name="hint_phone_number">Vui lòng nhập số điện thoại chính xác</string>
     <string name="hint_phone_num">Vui lòng nhập số điện thoại</string>
 
