--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1359,6 +1359,13 @@
     <string name="stacked_combination">叠起组合</string>
     <string name="bet_parlay">+串关</string>
     <string name="bet_single">单注</string>
+    <string name="str_if_accept_odds_changes_title">是否接受赔率变化</string>
+    <string name="str_if_accept_odds_changes_des_subtitle">因为赛事赔率可能随时会产生变化（特别是滚球阶段）。为了让您有能更好的下注体验。您可以选择以下三种投注方式。</string>
+    <string name="str_if_accept_odds_changes_des1">1.接受任何赔率变化—选择该选项时.我们会按照最新的赔率给您生成注单。</string>
+    <string name="str_if_accept_odds_changes_des2">2.接受最优赔率变化—选择该选项时 如果最新的赔率优于您选择的赔率，我们会生成注单。如果最新的赔率低于您选择的赔率，我们不会生成注单，并提醒您赔率变化
+</string>
+    <string name="str_ok_i_got_it">好的,我知道了</string>
+    <string name="str_max_bet_money">最大投注额度:</string>
     <!--投注改版-->
 
 </resources>
