--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1283,7 +1283,7 @@
     <string name="home_live">Live</string>
     <string name="home_sports">Thể Thao</string>
     <string name="home_word_cup">WC 2022</string>
-    <string name="home_slot">Slot</string>
+    <string name="home_slot">Trò Chơi</string>
     <string name="home_on_game">Cờ vua</string>
     <string name="langugae_setting">Cài đặt ngôn ngữ</string>
     <string name="setting_center">Cài đặt</string>
