--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1366,6 +1366,7 @@
 </string>
     <string name="str_ok_i_got_it">好的,我知道了</string>
     <string name="str_max_bet_money">最大投注额度:</string>
+    <string name="str_odds_already_changed_check_please">赔率已经变化,请确认最新赔率</string>
     <!--投注改版-->
 
 </resources>
