OK-3553 上传支付凭证功能完成

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1341,4 +1341,8 @@
     <string name="error_new_password">Password consist 6-20 characters and must have a combination of numbers and letters.</string>
     <string name="reget_phone_code_for">Reacquire</string>
     <string name="pay_maya">Paymaya</string>
+    <string name="format_error">format doesn\'t match</string>
+    <string name="over_size">oversized files</string>
+    <string name="upload_error">upload failed</string>
+    <string name="optional_tips">Optional:Only support PNG or JPG format files, and less than 2MB</string>
 </resources>
