--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1346,4 +1346,5 @@
     <string name="over_size">文件过大</string>
     <string name="upload_error">上传失败</string>
     <string name="optional_tips">选填:仅支持PNG或者JPG格式的文件，且小于2MB</string>
+    <string name="no_file">没有选中任何文件</string>
 </resources>
