--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1363,4 +1363,5 @@
     <string name="over_size">oversized files</string>
     <string name="upload_error">upload failed</string>
     <string name="optional_tips">Optional:Only support PNG or JPG format files, and less than 2MB</string>
+    <string name="no_file">No file chosen</string>
 </resources>
