多语言提示修改

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1330,4 +1330,5 @@
     <string name="upload_error">Tải lên thất bại</string>
     <string name="optional_tips">Tùy chọn: Chỉ hỗ trợ tệp định dạng PNG hoặc JPG và dưới 2MB</string>
     <string name="no_file">Chưa chọn tập tin</string>
+    <string name="error_amount_limit_less">Tiền nạp nhỏ hơn mức tối thiểu</string>
 </resources>
