--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1353,21 +1353,21 @@
     <string name="error_new_password">Password consist 6-20 characters and must have a combination of numbers and letters.</string>
     <string name="deadline">Deadline</string>
     <!--投注改版-->
-    <string name="accept_any_change_in_odds">接受任何赔率变化</string>
-    <string name="accept_better_change_in_odds">接受更好赔率变化</string>
-    <string name="accept_never_change_in_odds">永不接受赔率变化</string>
-    <string name="expand_more_combinations">展开更多组合</string>
-    <string name="stacked_combination">叠起组合</string>
-    <string name="bet_parlay">+串关</string>
-    <string name="bet_single">单注</string>
-    <string name="str_if_accept_odds_changes_title">是否接受赔率变化</string>
-    <string name="str_if_accept_odds_changes_des_subtitle">因为赛事赔率可能随时会产生变化（特别是滚球阶段）。为了让您有能更好的下注体验。您可以选择以下三种投注方式。</string>
-    <string name="str_if_accept_odds_changes_des1">1.接受任何赔率变化—选择该选项时.我们会按照最新的赔率给您生成注单。</string>
-    <string name="str_if_accept_odds_changes_des2">2.接受最优赔率变化—选择该选项时 如果最新的赔率优于您选择的赔率，我们会生成注单。如果最新的赔率低于您选择的赔率，我们不会生成注单，并提醒您赔率变化
+    <string name="accept_any_change_in_odds">Accept any odds</string>
+    <string name="accept_better_change_in_odds">Accept better odds</string>
+    <string name="accept_never_change_in_odds">Never accept odds change</string>
+    <string name="expand_more_combinations">More combinations</string>
+    <string name="stacked_combination">Stack up combination</string>
+    <string name="bet_parlay">+Parlay</string>
+    <string name="bet_single">Single</string>
+    <string name="str_if_accept_odds_changes_title">Whether to accept the odds change</string>
+    <string name="str_if_accept_odds_changes_des_subtitle">Match odds can change at any time (especially during in-play). In order to give you a better betting experience. You can choose the following three betting methods.</string>
+    <string name="str_if_accept_odds_changes_des1">1. Accept any odds -- when this option is selected. We\'ll give you a slip based on the latest odds.</string>
+    <string name="str_if_accept_odds_changes_des2">2. Accept best odds - When selecting this option, if the latest odds are better than your chosen odds, we will generate a slip. If the latest odds are lower than the odds you have chosen, we do not generate a slip and remind you of the odds change
 </string>
-    <string name="str_ok_i_got_it">好的,我知道了</string>
-    <string name="str_max_bet_money">最大投注额度:</string>
-    <string name="str_odds_already_changed_check_please">赔率已经变化,请确认最新赔率</string>
+    <string name="str_ok_i_got_it">Ok, I see</string>
+    <string name="str_max_bet_money">Max bet limit:</string>
+    <string name="str_odds_already_changed_check_please">The odds changed. Please confirm latest odds</string>
     <!--投注改版-->
 
     <string name="reget_phone_code_for">Reacquire</string>
