--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1347,7 +1347,7 @@
     <string name="str_if_accept_odds_changes_des2">2. Accept best odds - When selecting this option, if the latest odds are better than your chosen odds, we will generate a slip. If the latest odds are lower than the odds you have chosen, we do not generate a slip and remind you of the odds change
 </string>
     <string name="str_ok_i_got_it">Ok, I see</string>
-    <string name="str_max_bet_money">Max bet limit:</string>
+    <string name="str_max_bet_money">Max bet limit:%1$s</string>
     <string name="str_odds_already_changed_check_please">The odds changed. Please confirm latest odds</string>
     <string name="reget_phone_code_for">Reacquire</string>
 </resources>
