--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1352,7 +1352,7 @@
     <string name="str_if_accept_odds_changes_des2">2.接受最优赔率变化—选择该选项时 如果最新的赔率优于您选择的赔率，我们会生成注单。如果最新的赔率低于您选择的赔率，我们不会生成注单，并提醒您赔率变化
 </string>
     <string name="str_ok_i_got_it">好的,我知道了</string>
-    <string name="str_max_bet_money">最大投注额度:</string>
+    <string name="str_max_bet_money">最大投注额度:%1$s</string>
     <string name="str_odds_already_changed_check_please">赔率已经变化,请确认最新赔率</string>
     <!--投注改版-->
     <string name="reget_phone_code_for">重新获取</string>
