--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -435,7 +435,7 @@
     <string name="hint_pay1">1. The payment will be automatically received after successful payment, and the prompt will pop up.</string>
     <string name="hint_pay2">2. If there is no response for a long time, please contact customer service.</string>
     <string name="btn_look_for">Check trade</string>
-    <string name="btn_service">Customer Service</string>
+    <string name="btn_service">contact CS</string>
     <string name="txv_transfer_pay">Transfer</string>
     <string name="txv_crypto_pay">Virtual currency transfer</string>
     <string name="error_recharge_amount">Incorrect format or value of top-up amount</string>
@@ -1230,7 +1230,7 @@
     <string name="local_time">Local Time:</string>
     <string name="click_upload_id_photo">Click upload ID photo</string>
     <string name="change_other_ID_photos">Change to other ID photos</string>
-    <string name="customer_service_help">If you need help, please contact Us</string>
+    <string name="customer_service_help">If you need help, please contact CS</string>
     <string name="league_filter">Match filter</string>
     <string name="reverse_select">Inverse</string>
     <string name="video">Video</string>
@@ -1365,4 +1365,5 @@
     <string name="optional_tips">Optional:Only support PNG or JPG format files, and less than 2MB</string>
     <string name="no_file">No file chosen</string>
     <string name="error_amount_limit_less">Deposit amount less than min limit</string>
+    <string name="text_service">CS</string>
 </resources>
