修改本地图标显示

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1239,6 +1239,7 @@
     <string name="join_us_win_wealth">Join us, win-win wealth</string>
     <string name="payment_method">Payment method</string>
     <string name="select_file">Select file</string>
+    <string name="select_file1">Select file</string>
     <string name="error_recommend_agent">No matched</string>
     <string name="login_welcome">Hi, Welcome to OKbet~</string>
     <string name="betting">Betting</string>
