--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1176,6 +1176,7 @@
     <string name="join_us_win_wealth">เข้าร่วมกับเราชนะความรวย</string>
     <string name="payment_method">วิธีการชำระเงิน</string>
     <string name="select_file">เลือกไฟล์</string>
+    <string name="select_file1">เลือกไฟล์</string>
     <string name="filter">คัดเลือก</string>
     <string name="anime">แอนิเมชั่น</string>
     <string name="video">วีดีโอ</string>
