--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1220,6 +1220,7 @@
     <string name="join_us_win_wealth">Tham gia ngay để cùng giàu có</string>
     <string name="payment_method">Kiểu thanh toán</string>
     <string name="select_file">Chọn tệp tin</string>
+    <string name="select_file1">Chọn tệp</string>
     <string name="error_recommend_agent">Không khớp</string>
     <string name="filter">Lọc</string>
     <string name="anime">Animasi</string>
