--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1204,6 +1204,7 @@
     <string name="upload_id_photo">上传证件照片</string>
     <string name="hint_file_selected">已选择档案</string>
     <string name="select_file">选择档案</string>
+    <string name="select_file1">选择文件</string>
     <string name="correct">波胆</string>
     <string name="my_message">我的消息</string>
     <string name="betting_setting">投注设置</string>
