修复注单流程优化一些bug

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1319,6 +1319,7 @@
     <string name="Pinned">Đã ghim</string>
     <string name="Unpin">Huỷ ghim</string>
     <string name="your_bet_order_success">Cược đơn thành công</string>
+    <string name="your_bet_order_fail">Cược thất bại, tỷ lệ cược thay đổi</string>
     <string name="dont_have_slot_game">Hiện không có game</string>
     <string name="find_back_password">Tìm lại mật khẩu</string>
     <string name="deadline">Hạn đến</string>
@@ -1346,6 +1347,8 @@
     <string name="str_ok_i_got_it">Tôi biết rồi</string>
     <string name="str_max_bet_money">Tiền cược tối đa:%1$s</string>
     <string name="str_odds_already_changed_check_please">Tỷ lệ cược thay đổi, vui lòng xác nhận tỷ lệ cược mới nhất</string>
+    <string name="str_return_last_step">Bước trước đó</string>
+    <string name="str_bet_other_game">Cược thị trường khác</string>
     <!--投注改版-->
     <string name="pay_maya">Paymaya</string>
     <string name="format_error">Định dạng không phù hợp</string>
