--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1368,15 +1368,16 @@
     <string name="bet_single">Single</string>
     <string name="str_if_accept_odds_changes_title">Whether to accept the odds change</string>
     <string name="str_if_accept_odds_changes_des_subtitle">Match odds can change at any time (especially during in-play). In order to give you a better betting experience. You can choose the following three betting methods.</string>
-    <string name="str_if_accept_odds_changes_des1">1. Accept any odds -- when this option is selected. We\'ll give you a slip based on the latest odds.</string>
+    <string name="str_if_accept_odds_changes_des1">1. Accept any odds — when this option is selected. We\'ll give you a slip based on the latest odds.</string>
     <string name="str_if_accept_odds_changes_des2">2. Accept best odds - When selecting this option, if the latest odds are better than your chosen odds, we will generate a slip. If the latest odds are lower than the odds you have chosen, we do not generate a slip and remind you of the odds change
 </string>
-    <string name="str_if_accept_odds_changes_des3">3. 不接受赔率变化--选择该选项时：如果最新的赔率和您选择的赔率不同，我们不会生成注单，并提醒您赔率变化</string>
+    <string name="str_if_accept_odds_changes_des3">3. Not accept odds changes - if the latest odds are different from the odds you selected, we will not generate a slip and and remind you of the odds change</string>
     <string name="str_ok_i_got_it">Ok, I see</string>
     <string name="str_max_bet_money">Max bet limit:%1$s</string>
     <string name="str_odds_already_changed_check_please">The odds changed. Please confirm latest odds</string>
+    <string name="str_return_last_step">Last step</string>
+    <string name="str_bet_other_game">Bet other market</string>
     <!--投注改版-->
-
     <string name="reget_phone_code_for">Reacquire</string>
     <string name="online_fortune_pay">FortunePay</string>
     <string name="pay_maya">Paymaya</string>
