--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -63,6 +63,7 @@
     <string name="hint_withdrawal_pwd">密码为4个数字</string>
     <string name="phone_number">手机号码</string>
     <string name="hint_phone_number">请输入正确的手机号码</string>
+    <string name="hint_phone_num">请输入手机号码</string>
     <string name="error_phone_number">手机号码格式错误</string>
     <string name="qq_number">QQ号码</string>
     <string name="hint_qq_number">请输入QQ账号</string>
@@ -1349,5 +1350,7 @@
     <string name="optional_tips">选填:仅支持PNG或者JPG格式的文件，且小于2MB</string>
     <string name="no_file">没有选中任何文件</string>
     <string name="error_amount_limit_less">充值额小于最低限额</string>
+    <string name="update_voucher">上传凭证</string>
+    <string name="no_select_file">未选择文件</string>
 
 </resources>
