--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1358,6 +1358,7 @@
     <string name="str_max_bet_money">Max bet limit:%1$s</string>
     <string name="str_odds_already_changed_check_please">The odds changed. Please confirm latest odds</string>
     <string name="str_return_last_step">Last step</string>
+    <string name="str_check_bets">Bets Details</string>
     <string name="str_bet_other_game">Bet other market</string>
     <string name="reget_phone_code_for">Reacquire</string>
     <string name="pay_maya">PayMaya</string>
