--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1350,6 +1350,7 @@
     <string name="str_odds_already_changed_check_please">Tỷ lệ cược thay đổi, vui lòng xác nhận tỷ lệ cược mới nhất</string>
     <string name="str_return_last_step">Trở về</string>
     <string name="str_bet_other_game">Cược thị trường khác</string>
+    <string name="str_check_bets">Chi tiết đơn cược</string>
     <!--投注改版-->
     <string name="format_error">Định dạng không phù hợp</string>
     <string name="over_size">Tệp quá lớn</string>
