--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -557,6 +557,7 @@
     <string name="text_bank_card_modify_success">Edit bank card successfully</string>
     <string name="text_crypto_modify_success">Edit virtual coin successfully</string>
     <string name="text_e_wallet_modify_success">Edit eWallet successfully</string>
+    <string name="str_press_again_to_exit_the_program">Please confirm to exit again</string>
     <string name="text_pay_maya_modify_success">Edit PayMaya successfully</string>
     <string name="bet_receipt_bet_quota">Stake：</string>
     <string name="bet_info_list_win_quota">To win：</string>
@@ -1195,9 +1196,9 @@
     <string name="kyc_notification_reject">KYC Notification [ REJECT ]</string>
     <string name="kyc_notice_system">Notice System </string>
     <string name="kyc_text_operations">[TEXT] Operations</string>
-    <string name="kyc_add">Add</string>
 
     <string name="next_step">NEXT STEP</string>
+    <string name="kyc_add">Add</string>
     <string name="hint_select_document_type">Valid ID Type</string>
     <string name="hint_select_document_number">Enter ID number</string>
     <string name="identity_number">ID Number</string>
