--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1391,4 +1391,5 @@
     <string name="text_service">CS</string>
     <string name="update_voucher">Upload receipt</string>
     <string name="no_select_file">Unselected files</string>
+    <string name="str_press_again_to_exit_the_program">"Please confirm to exit again  "</string>
 </resources>
