--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="login_account">Account</string>
     <string name="please_input_account">your username</string>
     <string name="login_password">Password</string>
-    <string name="remember_password">Save this password</string>
+    <string name="remember_password">Remember Password</string>
     <string name="forget_password_question">Forgot password?</string>
     <string name="desc_forget_password">Please contact customer service</string>
     <string name="sign_up_know">Sign up now!</string>
@@ -36,7 +36,7 @@
     <string name="recommend_code">Invite Code(Optional</string>
     <string name="hint_recommend_code">Please enter invite code</string>
     <string name="error_recommend_code">Not available the outlet, please confirm</string>
-    <string name="member_account">Username</string>
+    <string name="member_account">Account</string>
     <string name="hint_member_account">4-16 characters and contain numbers and letters.</string>
     <string name="error_member_account">Username must be 4–16 characters and contain letter and numbers</string>
     <string name="error_register_id_exist">Username already exists</string>
