--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -171,7 +171,7 @@
     <string name="infomation_center">Trung tâm thông tin</string>
     <string name="left_menu_odds_type_setting">Cài đặt thị trường</string>
     <string name="go_back_home_page">Quay lại trang chủ</string>
-    <string name="profile_center">Trung tâm cá nhân</string>
+    <string name="profile_center">Trang cá nhân</string>
     <string name="member_level">Cấp bậc hội viên</string>
     <string name="game_settlement">Kết quả trận đấu</string>
     <string name="app_download">Tải xuống ứng dụng</string>
