--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -353,7 +353,7 @@
     <string name="confirmed">Confirmed</string>
     <string name="bet_detail">Bets details</string>
     <string name="bet_time">Betting time</string>
-    <string name="bet_time2">Time</string>
+    <string name="bet_time2">Betting time</string>
     <string name="league_name">League Name:</string>
     <string name="game_match">Match：</string>
     <string name="play_type">Betting method</string>
