--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -8,7 +8,7 @@
     <string name="error_reading_file">Lỗi đọc tệp</string>
     <string name="message_guest_no_permission">tài khoản demo không có chức năng hỗ trợ tư vấn, vui lòng đăng ký tài khoản</string>
     <string name="message_socket_connect">Kết nối mạng vượt quá thời gian chờ, vui lòng kết nối lại</string>
-    <string name="message_network_no_connect">vui lòng kiểm tra kết nối mạng rồi thử lại</string>
+    <string name="message_network_no_connect">Kết nối mạng đã quá thời gian chờ, vui lòng kết nối lại</string>
     <string name="message_network_timeout">kết nối mạng vượt quá thời gian, vui lòng thử lại</string>
     <string name="error">Nhắc nhở</string>
     <string name="error_input_amount">Số tiền bạn đã nhập sai hoặc giá trị không hợp lệ</string>
